tests/files/flow_controller_tests/should_run/106.cmdr
x = 20.5;
print arccosh(x);