tests/files/flow_controller_tests/should_fail/100.cmdr
x = true;
print arccosh(x);